<resources>
    <string name="app_name">contactappflow</string>
    <string name="search_hint">Search by name or phone</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone number</string>
    <string name="email_hint">Email (optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_title">Delete Contact</string>
    <string name="delete_contact_message">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_phone_required">Phone number is required</string>
    <string name="error_phone_invalid">Invalid phone number</string>
    <string name="error_email_invalid">Invalid email address</string>
</resources>